Prepare examples package for Compiler work